MINIFICPP-2059 Handle content repository remove failures