extensions/rocksdb-repos/DatabaseContentRepository.h
@@ -64,10 +64,12 @@ class DatabaseContentRepository : public core::ContentRepository {
     return remove(claim);
   }
 
-  bool remove(const minifi::ResourceClaim &claim) override;
   bool exists(const minifi::ResourceClaim &streamId) override;
 
   void clearOrphans() override;
+
+ protected:
+  bool removeKey(const std::string& content_path) override;
 
  private:
   std::shared_ptr<io::BaseStream> write(const minifi::ResourceClaim &claim, bool append, minifi::internal::WriteBatch* batch);
