libminifi/include/core/ContentRepository.h
@@ -21,6 +21,7 @@
 #include <memory>
 #include <string>
 #include <utility>
+#include <list>
 
 #include "properties/Configure.h"
 #include "ResourceClaim.h"
@@ -53,10 +54,18 @@ class ContentRepository : public StreamManager<minifi::ResourceClaim>, public ut
 
   virtual void clearOrphans() = 0;
 
+  bool remove(const minifi::ResourceClaim &streamId) override {
+    return removeKey(streamId.getContentFullPath());
+  }
+
  protected:
+  void removeFromPurgeList();
+  virtual bool removeKey(const std::string& content_path) = 0;
+
   std::string directory_;
   std::mutex count_map_mutex_;
   std::map<std::string, uint32_t> count_map_;
+  std::list<std::string> purge_list_;
 };
 
 }  // namespace org::apache::nifi::minifi::core
