libminifi/src/core/repository/VolatileContentRepository.cpp
@@ -122,40 +122,38 @@ std::shared_ptr<io::BaseStream> VolatileContentRepository::read(const minifi::Re
   return nullptr;
 }
 
-bool VolatileContentRepository::remove(const minifi::ResourceClaim &claim) {
+bool VolatileContentRepository::removeKey(const std::string& content_path) {
   if (LIKELY(minimize_locking_ == true)) {
     std::lock_guard<std::mutex> lock(map_mutex_);
-    auto ent = master_list_.find(claim.getContentFullPath());
+    auto ent = master_list_.find(content_path);
     if (ent != master_list_.end()) {
       auto ptr = ent->second;
       // if we cannot remove the entry we will let the owner's destructor
       // decrement the reference count and free it
-      master_list_.erase(claim.getContentFullPath());
+      master_list_.erase(content_path);
       // because of the test and set we need to decrement ownership
       ptr->decrementOwnership();
-      if (ptr->freeValue(claim.getContentFullPath())) {
-        logger_->log_info("Deleting resource %s", claim.getContentFullPath());
-        return true;
+      if (ptr->freeValue(content_path)) {
+        logger_->log_info("Deleting resource %s", content_path);
       } else {
-        logger_->log_info("free failed for %s", claim.getContentFullPath());
+        logger_->log_info("free failed for %s", content_path);
       }
     } else {
-      logger_->log_info("Could not remove %s", claim.getContentFullPath());
+      logger_->log_info("Could not remove %s", content_path);
     }
   } else {
     std::lock_guard<std::mutex> lock(map_mutex_);
-    auto claim_item = master_list_.find(claim.getContentFullPath());
+    auto claim_item = master_list_.find(content_path);
     if (claim_item != master_list_.end()) {
       auto size = claim_item->second->getLength();
       delete claim_item->second;
-      master_list_.erase(claim.getContentFullPath());
+      master_list_.erase(content_path);
       repo_data_.current_size -= size;
     }
-    return true;
   }
 
-  logger_->log_info("Could not remove %s, may not exist", claim.getContentFullPath());
-  return false;
+  logger_->log_info("Could not remove %s, may not exist", content_path);
+  return true;
 }
 
 }  // namespace org::apache::nifi::minifi::core::repository
